--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "tailwindcss": "^3.0.18"
+    },
+    "dependencies": {
+        "bootstrap-icons": "^1.10.4"
     }
 }
