--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
+        "libern/qr-code-reader": "^1.0",
         "php": "^7.3|^8.0|^8.1.17",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
